# fake-commit

./: .commit_marker  .env.example  .gitignore  README.md  commit_log.txt  pyproject.toml
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-05-30-random-mode-implementation.md
src/: __init__.py  cli.py  config.py  git_client.py  main.py
